espresso10: defconfig regen & set all tab2 as espresso
Change-Id: Ia441ac829d58324da968e1a8399b7baefb0fb5d5

--- a/arch/arm/configs/p3100_defconfig
+++ b/arch/arm/configs/p3100_defconfig
@@ -493,7 +493,10 @@ CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART=y
 # CONFIG_USE_OF is not set
 CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
-CONFIG_CMDLINE=""
+CONFIG_CMDLINE="androidboot.hardware=espresso"
+# CONFIG_CMDLINE_FROM_BOOTLOADER is not set
+CONFIG_CMDLINE_EXTEND=y
+# CONFIG_CMDLINE_FORCE is not set
 # CONFIG_XIP_KERNEL is not set
 # CONFIG_KEXEC is not set
 # CONFIG_CRASH_DUMP is not set
@@ -2303,17 +2306,13 @@ CONFIG_OMAP_HSI=y
 CONFIG_OMAP_HSI_DEVICE=y
 # CONFIG_OMAP_HSI_CHAR is not set
 # CONFIG_OMAP_HSI_PROTOCOL is not set
-# CONFIG_ACC_DRIVER_LIS3DH is not set
-# CONFIG_MAG_DRIVER_YAS532 is not set
 CONFIG_INPUT_YAS_SENSORS=y
 CONFIG_INPUT_YAS_ACCELEROMETER=y
 CONFIG_INPUT_YAS_ACCELEROMETER_POSITION=6
-# CONFIG_INPUT_YAS_ACC_ALERT_INT is not set
 CONFIG_INPUT_YAS_MAGNETOMETER=y
 CONFIG_INPUT_YAS_MAGNETOMETER_POSITION=6
 CONFIG_INPUT_YAS_ORIENTATION=y
 # CONFIG_OPTICAL_BH1721 is not set
-# CONFIG_INPUT_CM3663 is not set
 CONFIG_OPTICAL_AL3201=y
 CONFIG_SENSORS_CORE=y
 
