--- a/project.config
+++ b/project.config
@@ -1,7 +1,7 @@
 [project]
-	state = active
 [access "refs/heads/*"]
 	push = +force group Samsung Galaxy Tab 2 Maintainers
 	label-Code-Review = -2..+2 group Samsung Galaxy Tab 2 Maintainers
 	label-Verified = -1..+1 group Samsung Galaxy Tab 2 Maintainers
 	submit = group Samsung Galaxy Tab 2 Maintainers
+	pushMerge = group Samsung Galaxy Tab 2 Maintainers
