--- a/project.config
+++ b/project.config
@@ -5,3 +5,5 @@
 	label-Verified = -1..+1 group Samsung Galaxy Tab 2 Maintainers
 	submit = group Samsung Galaxy Tab 2 Maintainers
 	pushMerge = group Samsung Galaxy Tab 2 Maintainers
+[access "refs/for/refs/heads/*"]
+	pushMerge = group Samsung Galaxy Tab 2 Maintainers
